--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-preset-react-native": "^2.1.0",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-fbsdk": "^0.7.0",
     "react-native-fs": "^2.9.6",
     "react-native-image-picker": "^0.26.7",
-    "react-navigation": "^1.2.0",
-    "axios": "^0.17.1",
-    "react-native-vector-icons": "^4.4.2"
+    "react-native-vector-icons": "^4.4.2",
+    "react-navigation": "^1.2.0"
   }
 }
